[project]
name = "triton-inference-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "triton>=3.6.0",
    "tritonclient[grpc][grpc]>=2.65.0",
    "protobuf>=4.21.0",
    "opencv-python-headless>=4.8.0",
    "ultralytics>=8.4.14",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.0",
]
